Fix for save button overlap

--- a/styles/post.css
+++ b/styles/post.css
@@ -25,6 +25,7 @@
 
 #btn-save {
     display: none;
+    margin: 10px;
 }
 
 .edit-title {
